Fixing z-index bug at AuthNav

--- a/client/src/components/authNav/AuthNav.module.css
+++ b/client/src/components/authNav/AuthNav.module.css
@@ -7,7 +7,6 @@
     flex-direction: column;
     gap: 15px;
     border-radius: 6px;
-    z-index: 10;
 }
 
 .nav span {
@@ -49,7 +48,7 @@
 }
 
 .nav ul li button:hover {
-    background-color: rgba(25,255,255,.1);
+    background-color: rgba(25,255,255,.3);
 }
 
 .nav ul li button img {
