--- a/client/src/components/header/Header.module.css
+++ b/client/src/components/header/Header.module.css
@@ -49,7 +49,7 @@
 
 .keywords li {
     list-style: none;
-    font-size: 13px;
+    font-size: 14px;
     position: relative;
     color: var(--main-gray);
     border-radius: 15px;
@@ -107,7 +107,7 @@
         gap: 30px;
     }
     .keywords li {
-        font-size: 11px;
+        font-size: 13px;
     }
     .keywords li::after {
         display: none;
