--- a/client/src/modals/ModalLayout/ModalLayout.module.css
+++ b/client/src/modals/ModalLayout/ModalLayout.module.css
@@ -4,7 +4,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: rgba(4, 92, 127, 0.7);
+    background-color: rgba(21,109,187,0.5970763305322129);
     animation: opacityAnimation .3s ease forwards;
 }
 
@@ -21,7 +21,6 @@
     padding: 35px;
     border-radius: 6px;
     animation: opacityAndMovementAnimation .5s ease forwards;
-    box-shadow: 0px 6px 34px rgba(15, 70, 132, 0.41);
 }
 
 @keyframes opacityAnimation {
